--- a/FeelThisTv.html
+++ b/FeelThisTv.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FeelThis Tv</title>
+  <title>Feel Tv</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
     <section>
       <h2>About Us</h2>
       <p>
-        FeelThis Tv is a leading provider of creative and engaging content for businesses
+        Feel Tv is a leading provider of creative and engaging content for businesses
         and individuals. We specialize in creating compelling written, visual, and audio content to
         help our clients stand out in the digital world.
       </p>
@@ -40,7 +40,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 FeelThis Tv. All rights reserved.</p>
+    <p>&copy; 2023 Feel Tv. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
